# gnn-lib

./: .gitignore  LICENSE  README.md  setup.cfg
configs/: cgcnn_matpes_pbe_small.yaml  config_cgcnn.yaml
examples/: cgcnn.ipynb  cgcnn_ase_calculator.ipynb  cgcnn_matpes_pbe.ipynb  prepare_data.ipynb
gnn_lib/: config.py  data.py  data_utils.py  featurizers.py  graph_data.py  loss.py  metrics.py  scatter_utils.py  training.py  utils.py
gnn_lib/calculators/: __init__.py  cgcnn_calculator.py  utils.py
gnn_lib/models/: __init__.py  base_model.py  cgcnn.py  utils.py
gnn_lib/pretrained_models/: cgcnn_matpes_pbe_small.pt
