[metadata]
name = gnn_lib
version = attr: gnn_lib._version.__version__
author = Artem Dembitskiy
author_email = art.dembitskiy@gmail.com
url = https://github.com/dembart/gnn_lib
description = Baseline graph neural network models for materials science
long_description = file: README.md
long_description_content_type = text/markdown
keywords = GNN, ML, chemistry, materials-science
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    scipy
    ase
    vesin
    tqdm
    torch>=1.12
    lmdb
    pyyaml